--- a/index.html
+++ b/index.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-	<meta charset="UTF-8">
-	<style>
-	body {
-		background: ;
-		font-family: 'Courier New', sans-serif;
-		text-align: center;
-	}
-	.container {
-		width: 320px;
-		margin: 30px auto;
-	}
-	input[type="text"] {
-		width: 300px;
-		padding: 4px;
-		border-radius: 3px;
-	}
+    <meta charset="UTF-8">
+    <style>
+    body {
+        background: ;
+        font-family: 'Courier New', sans-serif;
+        text-align: center;
+    }
+    .container {
+        width: 320px;
+        margin: 30px auto;
+    }
+    input[type="text"] {
+        width: 300px;
+        padding: 7px;
+        border-radius: 3px;
+     font-size: 24px;
+        font-family: 'Courier New', sans-serif;
+        text-align: center;
+    }
+    #btn{
+     padding: 7px;
+        border-radius: 4px;
+        background: #00aaff;
+     box-shadow: 0 4px 0 #0088cc;
+     color: #fff;
+     cursor: pointer;
+    }
+    #btn:hover{
+     oppacity: 0.8;
+    }
+    fieldset{
+     margin-top: 40px;
+     border: 2px dashed #aaa;
+     border-radius: 5px;
+     text-align: center;
+    }
+    legend{
+     font-weight: bold;
+     text-align: left;
+    }
+    fieldset p{
+     text-align: center;
+    }
 
-	</style>
-	<title>Password Generator</title>
+    </style>
+    <title>Password Generator</title>
 </head>
 <body>
-	<div class="container">
-		<p><input type="text"></p>
-		<p><div id="btn">Generate Password</div></p>
-		<fieldset>
-			<legend>Options</legend>
-			<p>
-				Length: <input type="range">
-			</p>
-			<p>
-				Numbers?: <input type="checkbox">
-				Symbols?: <input type="checkbox">
-			</p>
-		</fieldset>
-	</div>
+    <div class="container">
+        <p><input type="text"></p>
+        <p><div id="btn">Generate Password</div></p>
+        <fieldset>
+            <legend>Options</legend>
+            <p>
+                Length: <input type="range">
+            </p>
+            <p>
+                Numbers?: <input type="checkbox">
+                Symbols?: <input type="checkbox">
+            </p>
+        </fieldset>
+    </div>
 </body>
 </html>
