--- a/index.html
+++ b/index.html
@@ -1,97 +1,135 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <style>
-    body {
-        background: ;
-        font-family: 'Courier New', sans-serif;
-        text-align: center;
-    }
-    .container {
-        width: 320px;
-        margin: 30px auto;
-    }
-    input[type="text"] {
-        width: 300px;
-        padding: 7px;
-        border-radius: 3px;
-     font-size: 24px;
-        font-family: 'Courier New', sans-serif;
-        text-align: center;
-    }
-    #btn{
-     padding: 7px;
-        border-radius: 4px;
-        background: #00aaff;
-     box-shadow: 0 4px 0 #0088cc;
-     color: #fff;
-     cursor: pointer;
-    }
-    #btn:hover{
-     oppacity: 0.8;
-    }
-    fieldset{
-     margin-top: 40px;
-     border: 2px dashed #aaa;
-     border-radius: 5px;
-     text-align: center;
-    }
-    legend{
-     font-weight: bold;
-     text-align: left;
-    }
-    fieldset p{
-     text-align: center;
-    }
+   <meta charset="UTF-8">
+   <style>
+   body {
+       background: ;
+       font-family: 'Courier New', sans-serif;
+       text-align: center;
+   }
+   .container {
+       width: 320px;
+       margin: 30px auto;
+   }
+   input[type="text"] {
+       width: 300px;
+       padding: 7px;
+       border-radius: 3px;
+    font-size: 24px;
+       font-family: 'Courier New', sans-serif;
+       text-align: center;
+   }
+   #btn{
+    padding: 7px;
+       border-radius: 4px;
+       background: #00aaff;
+    box-shadow: 0 4px 0 #0088cc;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+   }
+   #btn:hover{
+    oppacity: 0.8;
+   }
+   fieldset{
+    margin-top: 40px;
+    border: 2px dashed #aaa;
+    border-radius: 5px;
+    text-align: center;
+   }
+   legend{
+    font-weight: bold;
+    text-align: left;
+   }
+   fieldset p{
+    text-align: center;
+   }
+   p.comment{
+    margin-left: 20px;
+    text-align: left;
+    font-size: 12px;
+   }
 
-    </style>
-    <title>Password Generator</title>
+   </style>
+   <title>Password Generator</title>
 </head>
 <body>
-    <div class="container">
-        <p><input type="text" id="password"></p>
-        <p><div id="btn">Generate Password</div></p>
-        <fieldset>
-            <legend>Options</legend>
-            <p>
-                Length: (<span id="label-length">8</span>)<input type="range" id="slider" value="8" min="4" max="20">
-            </p>
-            <p>
-                Numbers?: <input type="checkbox">
-                Symbols?: <input type="checkbox">
-            </p>
-        </fieldset>
-    </div>
-  <script>
-    (function(){
-      'use strict'
+   <div class="container">
+       <p><input type="text" id="password"></p>
+       <p><div id="btn">Generate Password</div></p>
+       <fieldset>
+           <legend>Options</legend>
+           <p>
+               Length: (<span id="label-length">8</span>)<input type="range" id="slider" value="8" min="4" max="32">
+           </p>
+           <p>
+               Numbers?: <input type="checkbox" id="number">
+               Symbols?: <input type="checkbox" id="symbol">
+           </p>
+           <p class="comment">
+               ※ Symbols...
+           </p>
+           <p class="comment">!"#$%&'()*+,-./:;<=>?@[\]^_`{|}~
+           </p>
+       </fieldset>
+   </div>
+ <script>
+   (function(){
+     'use strict'
 
-      var password = document.getElementById('password');
-      var btn = document.getElementById('btn');
-      var slider = document.getElementById('slider');
-      var lbl = document.getElementById('label-length');
+     var password = document.getElementById('password');
+     var btn = document.getElementById('btn');
+     var slider = document.getElementById('slider');
+     var lbl = document.getElementById('label-length');
+     var number = document.getElementById('number');
+     var symbol = document.getElementById('symbol');
+         var pwElement = 'abcdefghijklmnopqrstuvwxyz';
 
-      /* get made password */
-      function getPassword(){
-    	  password.value = "PassWord!"
-      }
+     /* add numbers */
+     function addNumber(){
+         var num = '0123456789';
+         pwElement += num;
+     }
 
-      /* display value of length slider */
-      slider.addEventListener('change', function(){
-         lbl.innerHTML = this.value;
-       });
+     /* add symbols */
+     function addSymbol(){
+         var smbl = '!"#$%&' + "'()*+,-./:;<=>?@[\]^_`{|}~";
+         pwElement += smbl;
+     }
 
-      /* display made pw when click 'Generate Password' btn */
-      btn.addEventListener('click', function(){
-    	  getPassword();
+     /* get made password */
+     function getPassword(){
+         var len = slider.value;
+         var pwd = '';
+         for(var i = 0; i < len; i++){
+             pwd += pwElement[Math.floor(Math.random() * pwElement.length)];
+         }
+         password.value = pwd
+     }
+
+     /* display value of length slider */
+     slider.addEventListener('change', function(){
+        lbl.innerHTML = this.value;
       });
 
-      /* select all when click pw in input-area */
-      password.addEventListener('click', function(){
-    	  this.select();
-      });
-    })();
-  </script>
+     /* display made pw when click 'Generate Password' btn */
+     btn.addEventListener('click', function(){
+       // check checkbox
+         if(number.checked == true){
+         addNumber();
+       }
+         if(symbol.checked == true){
+         addSymbol();
+       }
+         getPassword();
+     });
+
+     /* select all when click pw in input-area */
+     password.addEventListener('click', function(){
+         this.select();
+     });
+   })();
+ </script>
 </body>
 </html>
