--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<span class="options">Numbers?: <input type="checkbox" id="number"></span>
 					<span class="options">Symbols?: <input type="checkbox" id="symbol"></span>
 				</p>
-				<p class="comment">※ Symbols... &nbsp;!"#$%&'()*+,-./:;<=>?@[\]^_`{|}~</p>
+				<p class="comment">※ Symbols... &nbsp;!"#$%&amp'()*+,-./:;<=>?@[\]^_`{|}~</p>
 			</fieldset>
 		</div>
 	 	<script>
